adding permits page and linking it to others

--- a/login_signin.html
+++ b/login_signin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAYFLOWER TRUCKING SERVICES</title>
 
+    <link rel="icon" type="image/x-icon" href="assets/mayflowerlogo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -14,7 +15,7 @@
 
 <body>
     <!--navbar-->
-    <header>
+    <!-- <header>
         <div class="navbar">
             <div class="logo"><a href="index.html"><img src="assets/mayflowerlogo.png" alt="logo"></a></div>
 
@@ -26,6 +27,34 @@
 
         <div class="dropdown_menu">
             <li><a href="index.html" class="login_btn">Back to Home</a></li>
+        </div>
+    </header> -->
+
+    <!--navbar-->
+    <header>
+        <div class="navbar">
+            <div class="logo"><a href="index.html"><img src="assets/mayflowerlogo.png" alt="logo"></a></div>
+            <ul class="links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="permits.html">Permits</a></li>
+                <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact Us</a></li>
+            </ul>
+            <a href="login_signin.html" class="login_btn">Log-in</a>
+            <div class="toggle_btn">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </div>
+
+        <!--responsive navbar view-->
+        <div class="dropdown_menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="permits.html">Permits</a></li>
+            <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact Us</a></li>
+            <li><a href="login_signin.html" class="login_btn">Log-in</a></li>
         </div>
     </header>
 
