--- a/permits.html
+++ b/permits.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - MAyFlower</title>
+    <title>Permits - MayFlower</title>
 
     <link rel="icon" type="image/x-icon" href="assets/mayflowerlogo.png">
-    <link rel="stylesheet" href="services_style.css">
+    <link rel="stylesheet" href="permits.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
+    <!--navbar-->
     <header>
         <div class="navbar">
             <div class="logo"><a href="index.html"><img src="assets/mayflowerlogo.png" alt="logo"></a></div>
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About-us</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="permits.html">Permits</a></li>
-                <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact</a></li>
+                <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact Us</a></li>
             </ul>
             <a href="login_signin.html" class="login_btn">Log-in</a>
             <div class="toggle_btn">
@@ -33,244 +32,43 @@
         <!--responsive navbar view-->
         <div class="dropdown_menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About-us</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="permits.html">Permits</a></li>
-            <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact</a></li>
+            <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact Us</a></li>
             <li><a href="login_signin.html" class="login_btn">Log-in</a></li>
         </div>
     </header>
 
     <section class="sec1">
-        <div class="area" id="info">
-            <h1>
-                SERVICES
-            </h1>
-            <p>
-                Driving on the open road is what you do best, and helping you do it efficiently is ours. Mayflower is
-                your
-                go-to resource, equipped with a wealth of knowledge and experience to help you navigate through the maze
-                of
-                state and federal regulations before your wheels start turning.
-            </p>
-            <p>
-                Below, you'll find our most sought-after services. However, our expertise doesn't end there. If you have
-                a
-                trucking need, odds are, we have a solution. So why wait? Give us a call, and let's get your business
-                moving
-                forward together.
-            </p>
-            <p>
-                We offer top-tier services tailored to ensure you pay no more than what is absolutely necessary for
-                permits
-                and taxes - because we understand, every dollar counts to your bottom line.
-            </p>
-        </div>
-        <div class="area">
-            <img class="truck" src="assets/service_truck.png" alt="truck">
-        </div>
+        <img src="assets/permit.png" alt="truck">
+        <h1>
+            Permits Made Easy with Mayflower
+        </h1>
     </section>
 
     <section class="sec2">
-        <h2>
-            ACCOUNTING & TAX SERVICES
-        </h2>
+        <h3>
+            IFTA Permit: New & Renewals
+        </h3>
         <p>
-            Operating a small business can be a roller coaster of challenges and victories. Recognizing this, Mayflower
-            dedicates significant resources to support the unique needs of small trucking businesses. We go beyond
-            managing your accounts - we're committed to ensuring you take advantage of every deduction you're eligible
-            for.
+            At Mayflower, we understand that navigating the complex world of permits and tax requirements can be overwhelming for trucking businesses. That's why we offer comprehensive assistance with obtaining and renewing permits, including IFTA permits and additional state-specific permits. Let us handle the paperwork while you stay focused on the road ahead
         </p>
+        <p>  
+            At Mayflower, we handle all your permit needs swiftly and efficiently. Whether you're applying for or renewing IFTA permits or additional state-specific permits, we've got you covered. Stay on the road while we take care of the paperwork.
+        </p>
+
+        <h3>
+            Partnering for Prosperity
+        </h3>
         <p>
-            Our streamlined system places us at the forefront of the trucking industry, specializing in accounting and
-            tax services that take the weight off your shoulders.
+            Mayflower isn't just a service provider; we're your trusted partner on the road to success. With our industry-specialized accounting and tax services, you'll gain peace of mind and valuable time to focus on driving your business towards growth and profitability.
         </p>
     </section>
 
     <section class="sec3">
-        <h3 class="sec3_head">
-            Our Services Include
-        </h3>
-        <div class="service_list">
-            <div class="s_list">
-                <h3>
-                    Company Establishment
-                </h3>
-                <p>
-                    We handle the acquisition of your EIN and state registrations.
-                </p>
-
-                <h3>
-                    Bank Reconciliation
-                </h3>
-                <p>
-                    Ensuring your financial records are accurate and up-to-date.
-                </p>
-
-                <h3>
-                    Annual Income Tax
-                </h3>
-                <p>
-                    Expert preparation & filling for both individual &corporate tax returns.
-                </p>
-            </div>
-            <div class="s_list">
-                <h3>
-                    Accounting Consultation
-                </h3>
-                <p>
-                    Guiding you through the intricacies of maintaining books.
-
-                <h3>
-                    Payroll Processing
-                </h3>
-                <p>
-                    Accurate and timely payroll management for your team.
-                </p>
-            </div>
-        </div>
-        <p class="sec3_p">
-            With Mayflower, your accounting and tax needs are in capable hands, leaving you free to steer your business
-            forward on the open road. We're here to champion your success - one mile, one number at a time. Let's embark
-            on this journey together.
-        </p>
-    </section>
-
-    <section class="sec4">
-        <h3>
-            Operating Authority & USDOT Number
-        </h3>
         <p>
-            Every company that operates commercial vehicles for passenger transport or interstate cargo hauling must
-            register with the FMCSA and obtain a unique USDOT Number. This also applies to commercial intrastate
-            carriers transporting hazardous materials in amounts that require a safety permit. The USDOT Number serves
-            as a unique identifier, used in audits, compliance reviews, crash investigations, and inspections.
-        </p>
-        <ul>
-            <li>Applying for a new USDOT Number</li>
-            <li>Updating USDOT registration information</li>
-            <li>Reactivating USDOT after revocation</li>
-        </ul>
-    </section>
-
-    <section class="sec5">
-        <div class="ser_list">
-            <h3>
-                MC#/ ICC Authority
-            </h3>
-            <p>
-                We can assist you in:
-            </p>
-            <ul>
-                <li>Applying for New Authority</li>
-                <li>Reinstating Revoked Authority</li>
-                <li>Initiating Voluntary Revocation of Authority</li>
-                <li>Making name or address changes on existing Authority</li>
-                <li>Initiating Voluntary Revocation of Authority</li>
-                <li>Requesting copies of MC Permit</li>
-            </ul>
-
-            <h3 class="extra_ser_list">
-                BOC-3
-            </h3>
-            <p>
-                Let us simplify your BOC-3 filing process.
-            </p>
-        </div>
-        <div class="ser_list">
-            <h3>
-                UCR Services
-            </h3>
-            <p>
-                The Unified Carrier Registration (UCR) system is the annual registration mechanism for interstate motor
-                carriers. If you fall into one of the following categories, you'll need UCR:
-            </p>
-            <ul>
-                <li>Operations requiring a USDOT number for interstate transportation</li>
-                <li>Operations requiring a MC or MX number from the FMCSA</li>
-                <li>Interstate brokers</li>
-                <li>Interstate leasing companies</li>
-                <li>Interstate freight forwarders</li>
-            </ul>
-            <span>
-                Interstate freight forwarders
-            </span>
-        </div>
-    </section>
-
-    <section class="sec6">
-        <h3 class="sec6_head">
-            Unlock the Full Potential of Your Trucking Business
-        </h3>
-        <p>
-            At Mayflower, we understand that your passion lies in the open road, not in tedious accounting tasks. That's
-            why we're here to transform your business journey. With our specialized accounting and tax services tailored
-            exclusively for trucking businesses, we'll keep you in the driver's seat while we handle the numbers.
-        </p>
-        <div class="all_services">
-            <div class="all_s">
-                <h3>
-                    Annual Income Tax
-                </h3>
-                <p>
-                    Leave the administrative hassles to us. Mayflower will take care of obtaining your Employer
-                    Identification Number (EIN) and registering your company with the state. We'll navigate the
-                    bureaucratic roadblocks so you can hit the ground running.
-                </p>
-
-                <h3>
-                    Stay on Track with Accurate Records
-                </h3>
-                <p>
-                    Keeping your financial records in order is crucial for your business's smooth operation. Mayflower
-                    takes charge of bank reconciliation and general ledger maintenance, ensuring that your records are
-                    accurate, up to date, and compliant with industry standards. Say goodbye to hours spent on
-                    bookkeeping and hello to a streamlined financial system.
-                </p>
-
-                <h3>
-                    Tax Expertise Tailored to Your Success
-                </h3>
-                <p>
-                    Navigating the complexities of annual income tax filings is a daunting task. Our tax specialists
-                    have in-depth knowledge of the trucking industry and are well-versed in the latest tax regulations.
-                    With Mayflower, you can trust that your tax returns, both for corporations and individuals, will be
-                    expertly prepared and filed, maximizing your eligible deductions and minimizing your tax liability.
-                </p>
-            </div>
-            <div class="all_s">
-                <h3>
-                    Partnering for Prosperity
-                </h3>
-                <p>
-                    Mayflower isn't just a service provider; we're your trusted partner on the road to success. With our
-                    industry-specialized accounting and tax services, you'll gain peace of mind and valuable time to
-                    focus on driving your business towards growth and profitability.
-                </p>
-
-                <h3>
-                    Expert Guidance, Unmatched Results
-                </h3>
-                <p>
-                    Accounting can be overwhelming, but with our dedicated team by your side, you'll never feel lost. We
-                    provide comprehensive accounting consultations to ensure you maintain your books effectively. From
-                    advice on expense categorization to optimizing cash flow, we'll guide you towards financial clarity
-                    and success.
-                </p>
-
-                <h3>
-                    Effortless Payroll Management
-                </h3>
-                <p>
-                    Accounting can be overwhelming, but with our dedicated team by your side, you'll never feel lost. We
-                    provide comprehensive accounting consultations to ensure you maintain your books effectively. From
-                    advice on expense categorization to optimizing cash flow, we'll guide you towards financial clarity
-                    and success.
-                </p>
-            </div>
-        </div>
-        <p class="last_p">
-            Join forces with Mayflower today, and together, let's fuel your trucking business's success. The road awaits—let us handle the numbers.
+            With Mayflower, your accounting and tax needs are in capable hands, leaving you free to steer your business forward on the open road. We're here to champion your success - one mile, one number at a time. Let's embark on this journey together.
         </p>
     </section>
 
@@ -388,5 +186,4 @@
         }
     </script>
 </body>
-
 </html>
