--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - MayFlower</title>
 
+    <link rel="icon" type="image/x-icon" href="assets/mayflowerlogo.png">
     <link rel="stylesheet" href="about_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -20,6 +21,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About-us</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="permits.html">Permits</a></li>
                 <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact</a></li>
             </ul>
             <a href="login_signin.html" class="login_btn">Log-in</a>
@@ -33,6 +35,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About-us</a></li>
             <li><a href="services.html">Services</a></li>
+            <li><a href="permits.html">Permits</a></li>
             <li><a href="https://mayflowertruckpermits.com/index.html#help_desk">Contact</a></li>
             <li><a href="login_signin.html" class="login_btn">Log-in</a></li>
         </div>
