--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <div class="logo"><a href="index.html"><img src="assets/mayflowerlogo.png" alt="logo"></a></div>
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About-us</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="#help_desk">Contact</a></li>
+                <li><a href="permits.html">Permits</a></li>
+                <li><a href="#help_desk">Contact Us</a></li>
             </ul>
             <a href="login_signin.html" class="login_btn">Log-in</a>
             <div class="toggle_btn">
@@ -40,9 +41,10 @@
         <!--responsive navbar view-->
         <div class="dropdown_menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About-us</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="#help_desk">Contact</a></li>
+            <li><a href="permits.html">Permits</a></li>
+            <li><a href="#help_desk">Contact Us</a></li>
             <li><a href="login_signin.html" class="login_btn">Log-in</a></li>
         </div>
     </header>
